# BJTML

./: CMakeLists.txt  README.md  main.cpp  my_cuda.cu  my_cuda.cuh
MATLAB/: get_camcal.m  reduce_stls.m  reformat_camcal.m  viz_poses.m
include/core/: ambiguous_pose_processing.h  calibration.h  data_structures_6D.h  drr_interactor.h  machine_learning_tools.h  model.h  optimizer_manager.h
include/cost_functions/: CostFunction.h  CostFunctionManager.h  DIRECT_MAHFOUZCustomVariables.h  sym_trap_functionCustomVariables.h
include/gpu/: camera_calibration.h  cuda_launch_parameters.h  gpu_metrics.cuh
include/gui/: interactor.h  mainscreen.h  mainscreen.ui  viewer.h
src/core/: curvature_utilities.cpp  frame.cu  location_storage.cpp  machine_learning_tools.cpp  optimizer_manager.cpp
src/cost_functions/: Corr.cpp  CostFunction.cpp  CostFunctionManager.cpp  DD_NEW_POLE_CONSTRAINT.cpp  DIRECT_DILATION.cpp  DIRECT_DILATION_POLE_CONSTRAINT.cpp  DIRECT_DILATION_SAME_Z.cpp  DIRECT_DILATION_T1.cpp  DIRECT_MAHFOUZ.cpp  IoU.cpp  sym_trap_function.cpp
src/gpu/: corr.cu  curvature_hausdorf_metric.cu  dilate_edge_detected_image.cu  distance_map_metric.cu  edge_detect_rendered_implant_model.cu  fast_implant_dilation_metric.cu  gpu_frame.cu  gpu_image.cu  gpu_image_functions.cu  gpu_metrics.cu  implant_mahfouz_metric.cu  iou.cu  l_1_1_matrix_diff_norm.cu  pose_matrix.cpp  render_drr_engine.cu  render_engine.cu
src/gui/: drr_tool.cpp  mainscreen.cpp  viewer.cpp
